--- a/package.json
+++ b/package.json
@@ -1,27 +1,39 @@
 {
-  "name": "mern",
+  "name": "com.paradoxicalcoders.bootcamphelper-server",
   "version": "1.0.0",
-  "description": "Mern Demo",
+  "description": "Backend Server for Bootcamp Helper",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "start:dev": "concurrently \"nodemon\" \"npm run client\"",
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
+  "nodemonConfig": {
+    "events": {
+      "restart": "kill-port 3001",
+      "crash": "kill-port 3001"
+    },
+    "delay": "1500",
+    "ignore": [
+      "client/*"
+    ]
+  },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "kill-port": "^1.5.1",
     "nodemon": "^1.19.1"
   },
   "dependencies": {
     "@papijs/papi": "^0.3.1",
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "helmet": "^3.18.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.0"
   }
