--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Backend Server for Bootcamp Helper",
   "main": "server.js",
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "start": "if-env NODE_ENV=production && yarn run start:prod || yarn run start:dev",
     "start:prod": "node server.js",
@@ -11,7 +14,9 @@
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build",
-    "kill": "npx kill-port 3001"
+    "kill": "kill-port 3001",
+    "lint": "eslint --quiet .",
+    "lint:fix": "eslint --fix ."
   },
   "nodemonConfig": {
     "events": {
@@ -27,6 +32,9 @@
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "eslint": "^6.0.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.3",
     "kill-port": "^1.5.1",
     "nodemon": "^1.19.1",
     "sequelize-cli": "^5.5.0"
