--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "mocha": true
     },
     "extends": "airbnb-base",
     "globals": {
@@ -12,5 +13,16 @@
     "parserOptions": {
         "ecmaVersion": 2018
     },
-    "rules": {}
+    "rules": {},
+    "overrides": [
+        {
+            "files": [
+                "*.test.js",
+                "*.spec.js"
+            ],
+            "rules": {
+                "no-unused-expressions": "off"
+            }
+        }
+    ]
 }
