--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "heroku-postbuild": "npm run build",
     "kill": "kill-port 3001",
     "lint": "eslint --quiet .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "test": "NODE_ENV=test nyc --reporter=html --reporter=text mocha",
+    "test:coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "nodemonConfig": {
     "events": {
@@ -31,12 +33,17 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "chai": "^4.2.0",
     "concurrently": "^4.1.0",
+    "coveralls": "^3.0.4",
     "eslint": "^6.0.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
     "kill-port": "^1.5.1",
+    "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.1",
+    "nyc": "^14.1.1",
     "sequelize-cli": "^5.5.0"
   },
   "dependencies": {
