--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react-gravatar": "^2.6.3",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.0-next.68"
   },
   "scripts": {
     "start": "react-scripts start",
