set-up User model, inspecting BCS for admin flags

--- a/config/config.json
+++ b/config/config.json
@@ -2,25 +2,35 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_development",
+    "database": "bootcamphelper",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "operatorsAliases": false
+    "define": {
+      "charset": "utf8",
+      "timestamps": true,
+      "underscored": true
+    }
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "bootcamphelper_test",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "operatorsAliases": false
+    "define": {
+      "charset": "utf8",
+      "timestamps": true,
+      "underscored": true
+    }
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql",
-    "operatorsAliases": false
+    "define": {
+      "charset": "utf8",
+      "timestamps": true,
+      "underscored": true
+    },
+    "logging": false
   }
 }
