--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,9 @@
     "parserOptions": {
         "ecmaVersion": 2018
     },
-    "rules": {},
+    "rules": {
+        "max-len": "off"
+    },
     "overrides": [
         {
             "files": [
