--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "homepage": "https://kubootcamphelper.herokuapp.com/",
   "scripts": {
-    "start": "if-env NODE_ENV=production && yarn run start:prod || yarn run start:dev",
+    "start": "if-env NODE_ENV=production && yarn start:prod || yarn start:dev",
     "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon\" \"yarn run client\"",
-    "client": "cd client && yarn run start",
+    "start:dev": "yarn kill && concurrently \"nodemon\" \"yarn client\"",
+    "client": "cd client && yarn start",
     "install": "cd client && yarn install",
-    "build": "cd client && yarn run build",
-    "heroku-postbuild": "yarn run build",
+    "build": "cd client && yarn build",
+    "heroku-postbuild": "yarn build",
     "kill": "kill-port 3001",
     "lint": "eslint --quiet .",
     "lint:fix": "eslint --fix .",
