//WIP adding new models, issues with N:M create

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,12 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Server",
-      "program": "${workspaceFolder}/server.js"
-    }
+      "name": "nodemon",
+      "runtimeExecutable": "nodemon",
+      "program": "${workspaceFolder}/server.js",
+      "restart": true,
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
+    },
   ]
 }
