--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "if-env NODE_ENV=production && yarn start:prod || yarn start:dev",
     "start:prod": "node server.js",
     "start:dev": "yarn kill && concurrently \"nodemon\" \"yarn client\"",
+    "server": "yarn kill && nodemon",
     "client": "cd client && yarn start",
     "install": "cd client && yarn install",
     "build": "cd client && yarn build",
@@ -30,7 +31,7 @@
       "restart": "yarn kill",
       "crash": "yarn kill"
     },
-    "delay": "2000",
+    "delay": "3000",
     "ignore": [
       "client/*"
     ]
