--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
                 "*.spec.js"
             ],
             "rules": {
-                "no-unused-expressions": "off"
+                "no-unused-expressions": "off",
+                "no-unused-vars": "off"
             }
         }
     ]
