--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.1.1",
     "@material-ui/icons": "^4.2.0",
     "clsx": "^1.0.4",
+    "dayjs": "^1.8.14",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-gravatar": "^2.6.3",
