IO Emit now works for specific class IDs

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "tester",
-    "password": "testing",
+    "username": "root",
+    "password": null,
     "database": "bootcamphelper",
     "host": "127.0.0.1",
     "dialect": "mysql",
