cleaning up ESLint and test file

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,9 @@ before_script:
     - mysql -uroot < tests/travis.sql
 
 script:
+  - yarn lint:fix
   - yarn lint
-  - yarn test
+  - yarn tests
   - yarn test:coverage
 
 notifications:
