--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "kill": "kill-port 3001",
     "lint": "eslint --quiet .",
     "lint:fix": "eslint --fix .",
-    "test": "yarn kill && NODE_ENV=test nyc --reporter=html --reporter=text mocha tests/**/*.spec.js --exit",
+    "tests": "yarn kill && NODE_ENV=test nyc --reporter=html --reporter=text mocha tests/**/*.spec.js --exit",
     "test:coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "nodemonConfig": {
