--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "validator": "^11.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
