--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
     "socket.io-client": "^2.2.0",
     "validator": "^11.1.0"
   },
